--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-<h1>Hello world!</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>My Website</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Grenze+Gotisch">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Codystar">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Henny+Penny">
+</head>
+
+<body>
+    <section class="lev1">
+        <h1>Welcome to My Website</h1>
+    </section>
+    <section class="lev1">
+        <h2>PERFORMANCE SCHEDULE</h2>
+    </section>
+    <section class="lev1">
+        <h2>MUSIC</h2>
+    </section>
+
+    <section class="lev1" class="soundCloudContainer">
+        <iframe width="900px" height="450" scrolling="no" frameborder="no" allow="autoplay"
+            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1701749376&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+    </section>
+
+    <section class class="lev1">
+        <h2>PICS & VIDS</h2>
+    </section>
+    <script src="index.js"></script>
+</body>
+
+</html>
