--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
+    <title>FABRICATOR | CAP.HILL.SEATTLE | Schedule x Music x Free Downloads</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
 
@@ -24,12 +24,13 @@
     </section>
     <section class="lev1">
         <h2>MUSIC</h2>
+        <section class="lev1" class="soundCloudContainer">
+            <iframe width="900px" height="450" scrolling="no" frameborder="no" allow="autoplay"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1701749376&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+        </section>
     </section>
 
-    <section class="lev1" class="soundCloudContainer">
-        <iframe width="900px" height="450" scrolling="no" frameborder="no" allow="autoplay"
-            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1701749376&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
-    </section>
+    
 
     <section class class="lev1">
         <h2>PICS & VIDS</h2>
