--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Grenze+Gotisch">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Codystar">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Henny+Penny">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 
 <body>
@@ -39,7 +41,16 @@
     <section class="lev1">
         <h2>MUSIC</h2>
         <br>
-        <p>Click to download songs for free.</p>
+        <div class="section group">
+            <div class="col span_1_of_2">
+            <h3>DIRECT DOWNLOAD .MP3s</h3>
+            <p>Click the above link</p>
+            </div>
+            <div class="col span_1_of_2">
+            <h3>SoundCloud download</h3>
+            <p></p>
+            </div>
+        </div>
     </section>
     <br>
     <section class="lev1">
@@ -242,8 +253,12 @@
     <section class="lev1">
         <h2>CONTACT</h2>
         <br>
-        <a href="https://www.instagram.com/fabricator.cap.hill.seattle/" target="_blank">Instagram</a>
-        <a href="https://www.facebook.com/brentlabasan/" target="_blank">Facebook</a>
+        <a href="https://www.instagram.com/fabricator.cap.hill.seattle/" target="_blank">
+            <i class="bi-instagram" style="font-size: 2rem; color: #0DF205;"></i>
+            Instagram</a>
+        <a href="https://www.facebook.com/brentlabasan/" target="_blank">
+            <i class="bi-facebook" style="font-size: 2rem; color: #0DF205;"></i>
+            Facebook</a>
     </section>
 
     <br><br><br>
