--- a/index.html
+++ b/index.html
@@ -43,20 +43,43 @@
         <br>
         <div class="section group">
             <div class="col span_1_of_2">
-            <h3>DIRECT DOWNLOAD .MP3s</h3>
-            <p>Click the above link</p>
+                <a href="https://www.mediafire.com/folder/4i88kpxxwgrij/v0.1" target="_blank">
+                    <h3>DIRECT DOWNLOAD .MP3s</h3>
+                    <br>
+                    <i class="bi-cloud-download-fill" style="font-size: 2rem; color: #0DF205;"></i>
+                    <br>
+                    <br>
+                    <p>Download all my music in .mp3 format for free!</p>
+                    <br>
+                </a>
             </div>
             <div class="col span_1_of_2">
-            <h3>SoundCloud download</h3>
-            <p></p>
+                <h3>SoundCloud free download</h3>
+                <img style="width: 25%" src="media/images/SoundCloud-download-button-location.png" />
+                <p></p>
             </div>
         </div>
     </section>
+    
+    <br>
+
+    <section class="lev1">
+        <h2>UPCOMING MIXTAPE: House of Brent</h2>
+        <h3>current version: v0.1</h3>
+        <br>
+        <p>I am releasing my debut mixtape "House of Brent 1" on April 15, 2024. During the time before then, I'm
+            gathering feedback on any changes or improvements that can be made.
+            <br><br>
+            If you want to help and work on me on the mixtape, <a href="#section-contact"><i class="bi-chat-square" style="font-size: 1rem; color: #0DF205;"></i> contact me</a>!
+        </p>
+    </section>
+
     <br>
     <section class="lev1">
         <iframe width="90%" height="450" scrolling="no" frameborder="no"
             src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1701749376&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
     </section>
+
 
     <br>
 
@@ -152,7 +175,8 @@
                     style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; line-height:17px; margin-bottom:0; margin-top:8px; overflow:hidden; padding:8px 0 7px; text-align:center; text-overflow:ellipsis; white-space:nowrap;">
                     <a href="https://www.instagram.com/reel/Cuk4hs3AEJ_/?utm_source=ig_embed&amp;utm_campaign=loading"
                         style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;"
-                        target="_blank">A post shared by Fabricator (@fabricator.cap.hill.seattle)</a></p>
+                        target="_blank">A post shared by Fabricator (@fabricator.cap.hill.seattle)</a>
+                </p>
             </div>
         </blockquote>
         <script async src="//www.instagram.com/embed.js"></script>
@@ -244,14 +268,15 @@
                     style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; line-height:17px; margin-bottom:0; margin-top:8px; overflow:hidden; padding:8px 0 7px; text-align:center; text-overflow:ellipsis; white-space:nowrap;">
                     <a href="https://www.instagram.com/p/Cui1e9kOj1b/?utm_source=ig_embed&amp;utm_campaign=loading"
                         style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;"
-                        target="_blank">A post shared by Fabricator (@fabricator.cap.hill.seattle)</a></p>
+                        target="_blank">A post shared by Fabricator (@fabricator.cap.hill.seattle)</a>
+                </p>
             </div>
         </blockquote>
         <script async src="//www.instagram.com/embed.js"></script>
     </section>
-<br><br>
+    <br><br>
     <section class="lev1">
-        <h2>CONTACT</h2>
+        <h2 id="section-contact">CONTACT</h2>
         <br>
         <a href="https://www.instagram.com/fabricator.cap.hill.seattle/" target="_blank">
             <i class="bi-instagram" style="font-size: 2rem; color: #0DF205;"></i>
