--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <br>
     <section class="lev1">
         <h2>PERFORMANCE SCHEDULE</h2>
-        <br>
+        <br><br>
         <div class="section group">
             <div class="col span_1_of_2">
                 <h3>Pike & 11th<br />Capitol Hill neighborhood, Seattle</h3>
@@ -36,11 +36,11 @@
             </div>
         </div>
     </section>
-    <br>
+    <br><br>
 
     <section class="lev1">
         <h2>MUSIC</h2>
-        <br>
+        <br><br>
         <div class="section group">
             <div class="col span_1_of_2">
                 <a href="https://www.mediafire.com/folder/4i88kpxxwgrij/v0.1" target="_blank">
@@ -56,7 +56,8 @@
             <div class="col span_1_of_2">
                 <h3>SoundCloud free download</h3>
                 <img style="width: 25%" src="media/images/SoundCloud-download-button-location.png" />
-                <p></p>
+                <br><br>
+                <p>On any SoundCloud playlists, click the Download button to download the mp3 for free!</p>
             </div>
         </div>
     </section>
@@ -81,7 +82,7 @@
     </section>
 
 
-    <br>
+    <br><br><br>
 
     <section class="lev1">
         <h2>PICS & VIDS</h2>
@@ -274,7 +275,7 @@
         </blockquote>
         <script async src="//www.instagram.com/embed.js"></script>
     </section>
-    <br><br>
+    <br><br><br>
     <section class="lev1">
         <h2 id="section-contact">CONTACT</h2>
         <br>
