--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
         </div>
     </section>
-    
+
     <br>
 
     <section class="lev1">
@@ -71,7 +71,8 @@
         <p>I am releasing my debut mixtape "House of Brent 1" on April 15, 2024. During the time before then, I'm
             gathering feedback on any changes or improvements that can be made.
             <br><br>
-            If you want to help and work on me on the mixtape, <a href="#section-contact"><i class="bi-chat-square" style="font-size: 1rem; color: #0DF205;"></i> contact me</a>!
+            If you want to help and work on me on the mixtape, <a href="#section-contact"><i class="bi-chat-square"
+                    style="font-size: 1rem; color: #0DF205;"></i> contact me</a>!
         </p>
     </section>
 
@@ -275,7 +276,26 @@
         </blockquote>
         <script async src="//www.instagram.com/embed.js"></script>
     </section>
+
     <br><br><br>
+
+    <section class="lev1">
+        <h2>PLAY WITH US</h2>
+        <br>
+        <p>Feel free to take a turn on the piano! Guitar players welcome!</p>
+    </section>
+
+    <br><br><br>
+
+    <section class="lev1">
+        <h2>PRACTICE WITH US</h2>
+        <br>
+        <p>If you want to practice playing music with Fabricator, <i class="bi-chat-square"
+            style="font-size: 1rem; color: #0DF205;"></i> contact me</a>!</p>
+    </section>
+
+    <br><br><br>
+    
     <section class="lev1">
         <h2 id="section-contact">CONTACT</h2>
         <br>
