--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <section class="lev1">
-        <h1>Welcome to My Website</h1>
+        <img src="media/images/fabricatorDOTlive - logo for header.png" />
     </section>
     <br>
     <section class="lev1">
