moving sections around

--- a/index.html
+++ b/index.html
@@ -19,23 +19,9 @@
 
 <body>
     <section class="lev1">
-        <img src="media/images/fabricatorDOTlive - logo for header.png" />
+        <img src="media/images/fabricatorDOTlive - logo for header.png" style="height: 200px;"/>
     </section>
-    <br>
-    <section class="lev1">
-        <h2>PERFORMANCE SCHEDULE</h2>
-        <br><br>
-        <div class="section group">
-            <div class="col span_1_of_2">
-                <h3>Pike & 11th<br />Capitol Hill neighborhood, Seattle</h3>
-                <p>I try to play as often as possible, even if the sky is grey.</p>
-            </div>
-            <div class="col span_1_of_2">
-                <h3>Brent's apartment<br />Capitol Hill neighborhood, Seattle</h3>
-                <p>If the weather outside is too wet, I play in my apartment.</p>
-            </div>
-        </div>
-    </section>
+
     <br><br>
 
     <section class="lev1">
@@ -80,6 +66,22 @@
     <section class="lev1">
         <iframe width="90%" height="450" scrolling="no" frameborder="no"
             src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1701749376&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+    </section>
+
+    <br><br>
+    <section class="lev1">
+        <h2>PERFORMANCE SCHEDULE</h2>
+        <br><br>
+        <div class="section group">
+            <div class="col span_1_of_2">
+                <h3>Pike & 11th<br />Capitol Hill neighborhood, Seattle</h3>
+                <p>I try to play as often as possible, even if the sky is grey.</p>
+            </div>
+            <div class="col span_1_of_2">
+                <h3>Brent's apartment<br />Capitol Hill neighborhood, Seattle</h3>
+                <p>If the weather outside is too wet, I play in my apartment.</p>
+            </div>
+        </div>
     </section>
 
 
