blinking text for "UPCOMING MIXTAPE: House of Brent"

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <br>
 
     <section class="lev1">
-        <h2>UPCOMING MIXTAPE: House of Brent</h2>
+        <h2 class="blink">UPCOMING MIXTAPE: House of Brent</h2>
         <h3>current version: v0.1</h3>
         <br>
         <p>I am releasing my debut mixtape "House of Brent 1" on April 15, 2024. During the time before then, I'm
