--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <p>I am releasing my debut mixtape "House of Brent 1" on April 15, 2024. During the time before then, I'm
             gathering feedback on any changes or improvements that can be made.
             <br><br>
-            If you want to help and work on me on the mixtape, <a href="#section-contact"><i class="bi-chat-square"
+            If you want to help and work with me on the mixtape, <a href="#section-contact"><i class="bi-chat-square"
                     style="font-size: 1rem; color: #0DF205;"></i> contact me</a>!
         </p>
     </section>
