--- a/index.html
+++ b/index.html
@@ -301,9 +301,14 @@
     <section class="lev1">
         <h2 id="section-contact">CONTACT</h2>
         <br>
+        <a href="https://www.tiktok.com/@fabricator.seattle" target="_blank">
+            <i class="bi-tiktok" style="font-size: 2rem; color: #0DF205;"></i>
+            TikTok</a>
+            &nbsp;&nbsp;&nbsp;
         <a href="https://www.instagram.com/fabricator.cap.hill.seattle/" target="_blank">
             <i class="bi-instagram" style="font-size: 2rem; color: #0DF205;"></i>
             Instagram</a>
+            &nbsp;&nbsp;&nbsp;
         <a href="https://www.facebook.com/brentlabasan/" target="_blank">
             <i class="bi-facebook" style="font-size: 2rem; color: #0DF205;"></i>
             Facebook</a>
