--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
       <!-- <li><img src="media/images/fabricatorDOTlive - logo for header.png" style="height: 50px;" /></li> -->
       <li id="hero">FABRICATOR</li>
       <li>MUSIC</li>
-      <li>SPECIAL EVENTS</li>
+      <!-- <li>SPECIAL EVENTS</li>
       <li>PERFORMANCE CALENDAR</li>
       <li>VIDEOS</li>
       <li>SOCIALS</li>
-      <li></li>
+      <li>MERCH</li> -->
       <li></li>
       <li></li>
     </ul>
@@ -48,16 +48,17 @@
 
     </section> -->
 
-    <h1>&gt; SPECIAL ANNOUNCEMENT</h1>
+    <!-- <h1>&gt; SPECIAL ANNOUNCEMENT</h1>
     <br><br>
     <h1>&gt; FABRICATOR'S NEW MIXTAPE</h1>
-    <h1>&nbsp;&nbsp; MIXTAPE OF FABRICATOR VOL. 1</h1>
+    <h1 class="animation_bounceShake">&nbsp;&nbsp; MIXTAPE OF FABRICATOR VOL. 1</h1>
     <h1>&nbsp;&nbsp; DROPPING SAT OCT 26 2024</h1>
 
     <br>
     <br>
     <h1>&gt; COME TO THE MIXTAPE RELEASE PARTY!</h1>
-    <h1>&nbsp;&nbsp; $100 RAFFLE!</h1>
+    <h1>&nbsp;&nbsp; $100 RAFFLE!</h1> -->
+
   </section>
 
 
@@ -88,7 +89,8 @@
     </section>
 
     <section class="right-half">
-      <h2>
+
+      <!-- <h2>
         MIXTAPE RELEASE PARTY
         <br>
         &gt; Sat Oct 26 2024
@@ -101,7 +103,8 @@
       <h3>
         RSVP @ <a href="https://www.facebook.com/share/Mqg1HbBccytUJMPL/" target="_blank">Facebook</a>
 
-      </h3>
+      </h3> -->
+
       <br />
       <!-- <br/> -->
       <!-- <br/> -->
